# shaypal5.github.io

./: .agent-plan.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  README.md  _config.yml  about.md  blog.md  code.md  community.md  contact.md  index.html  index.md  llms.txt  ppw.md  presentations.md  projects.md  pyproject.toml  research.md  talks.md  teaching.md
.github/: pr-agent-context-template.md
_includes/: about.md  footer.html  head.html  nav.html  seo.html  teach_toc.html
_layouts/: page.html
automation/: __init__.py  cli.py  config.py  course_family_content.py  data_io.py  external_link_allowlist.yml  google_drive.py  link_check.py  models.py  naming.py  openai_syllabus.py  publish.py  rendering.py  repository.py  site_preview.py  syllabus.py  validation.py
blog/: atom.xml  atom_r.xml  index.html
css/: main.css
data/: projects.yml  talks.yml  writing.yml
docs/: data_model.md  implementation_plan.md  operations.md  project_overview.md  redirects.md  review_workflow.md  system_architecture.md
js/: main.js
scripts/: export_latest_generalized_syllabi.py  format_teaching_yaml.py  mint_google_refresh_token.py
teaching/: bigdata22.md  data-vis-22a.md  data-vis-22b.md  data-vis-23a.md  data-vis.md  datanights-cohort3.md  datanights.md  datanights22.md  datanights23.md  datavis22.md  deep-learning-24b.md  deep-learning.md  econml-24.md  econml-25.md  econml.md  econml25.md  text-mining-24a.md  text-mining-25b.md  text-mining.md
tests/: test_cli.py  test_config_data_io.py  test_google_drive_publish.py  test_link_check.py  test_naming.py  (+6 more)
(+27 files in other folders)
